src/test/deca/context/invalid/ContextSansObjet/Identification/booleanNullInit.deca
//Description
//  Initialisation d'une variable boolean avec null
//
//Réponse
//  Erreur contextuelle ligne 9
//  type incompatible

{
    boolean x = null;
}